# openvino-face-detect

./: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
include/: facedetectionapp.h  openvinorunner.h
src/: facedetectionapp.cpp  openvinorunner.cpp
